# common-rs

./: Cargo.toml
src/: coro.rs  defer.rs  lib.rs  math.rs
src/math/: aabb.rs  color.rs  lerp.rs  plane.rs  quaternion.rs  vector.rs
src/math/aabb/: aabb2.rs  aabb2i.rs
src/math/color/: cint_interop.rs  conversions.rs  interop.rs
src/math/matrix/: mat2.rs  mat2x3.rs  mat3.rs  mat3x4.rs  mat4.rs
src/math/vector/: map.rs  vec2.rs  vec2i.rs  vec3.rs  vec3i.rs  vec4.rs
