[package]
name = "common"
version = "0.4.0"
edition = "2021"
authors = ["Patrick Monaghan <0x5f.manpat@gmail.com>"]

[dependencies]
rand = "0.8"
rand_derive2 = "0.1"

serde = { version = "1.0", optional = true }
mint = { version = "0.5", optional = true }
cint = { version = "0.3", optional = true }

[features]
serde = ["dep:serde", "serde/derive"]
interop = ["dep:mint", "dep:cint"]